@startuml
'https://plantuml.com/class-diagram
title 类的继承关系

abstract class AbstractFlyingObject {
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean
    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

abstract class AbstractAircraft {
	# maxHp:int
    # hp:int
    # direction:int
    # shootNum:int
    # power:int
    # shootStrategy:ShootStrategy
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getMaxHp():int
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
}

class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + increaseHp(int increase):void
}

abstract class EnemyAircraft {
    + EnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + {abstract} getScore():int
    + {abstract} getProps():List<AbstractProp>
    + setHp(int hp):void
    + setMaxHp(int maxHp):void
}

class BossEnemy {
    - score:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + getScore():int
    + update():void
    + getProps():List<AbstractProp>
}

class EliteEnemy {
    - score:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + getScore():int
    + getProps():List<AbstractProp>
}

class ElitePlusEnemy {
    - score:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + getScore():int
    + update():void
    + getProps():List<AbstractProp>
}

class MobEnemy {
    - score:int
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + getScore:int
    + getProps:List<AbstractProp>
}

class BaseBullet {
    - power:int
    + update():void
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
    + getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

abstract class AbstractProp {
    + AbstractProp(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + {abstract} activate(HeroAircraft hero)
}

class HpSupply {
    - hpIncrease:int
    + HpSupply(int x, int y, int speedY)
    + activate(HeroAircraft hero):void
}

class BombSupply {
    + {static} observers:List<BombObserver>
    + {static} registerObserver(BombObserver s):void
    + {static} removeObserve(BombObserver s):void
    - notifyObservers():void
    + BombSupply(int x, int y, int speedY)
    + activate(HeroAircraft hero):void
}

class FireSupply {
    - {static} DURATION:long
    + FireSupply(int x, int y, int speedY)
    + activate(HeroAircraft hero):void
}

class FirePlusSupply {
    - {static} DURATION:long
    + FirePlusSupply(int x, int y, int speedY)
    + activate(HeroAircraft hero):void
}

' ===== 关系部分 =====
AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- AbstractProp

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- EnemyAircraft

EnemyAircraft <|-- EliteEnemy
EnemyAircraft <|-- ElitePlusEnemy
EnemyAircraft <|-- BossEnemy
EnemyAircraft <|-- MobEnemy

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractProp <|-- HpSupply
AbstractProp <|-- BombSupply
AbstractProp <|-- FireSupply
AbstractProp <|-- FirePlusSupply

@enduml
